// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APIService GET /config respond 404 to address with no 3box 1`] = `
Object {
  "message": "Address link not found, address does not have a 3Box or is malformed",
  "status": "error",
}
`;

exports[`APIService GET /config respond json to DID with 3box 1`] = `
Object {
  "links": Array [
    Object {
      "message": "Create a new 3Box profile

- 
Your unique profile ID is did:muport:QmQAnachTJXMVHKa5Nu3mZNn5jGrJ9TvHJde3NSp8J4qzL 
Timestamp: 1571945163",
      "signature": "0x7bb809455e8291160bcb426d80b6a5adea0b6f8e4b61ba5d18d10019f6a17f111325c824071304b2de36a72e9eb005de6af840a2578ccc2fe850068b3a9e94d91b",
      "timestamp": 1571945163,
      "type": "ethereum-eoa",
      "version": 1,
    },
  ],
  "spaces": Object {
    "api": Object {
      "DID": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    },
  },
}
`;

exports[`APIService GET /config respond json to address with 3box 1`] = `
Object {
  "links": Array [
    Object {
      "message": "Create a new 3Box profile

- 
Your unique profile ID is did:muport:QmQAnachTJXMVHKa5Nu3mZNn5jGrJ9TvHJde3NSp8J4qzL 
Timestamp: 1571945163",
      "signature": "0x7bb809455e8291160bcb426d80b6a5adea0b6f8e4b61ba5d18d10019f6a17f111325c824071304b2de36a72e9eb005de6af840a2578ccc2fe850068b3a9e94d91b",
      "timestamp": 1571945163,
      "type": "ethereum-eoa",
      "version": 1,
    },
  ],
  "spaces": Object {
    "api": Object {
      "DID": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    },
  },
}
`;

exports[`APIService GET /list-spaces respond 404 to address with no 3box 1`] = `
Object {
  "message": "Address link not found, address does not have a 3Box or is malformed",
  "status": "error",
}
`;

exports[`APIService GET /list-spaces respond json to DID with profile 1`] = `
Array [
  "api",
]
`;

exports[`APIService GET /list-spaces respond json to address with profile 1`] = `
Array [
  "api",
]
`;

exports[`APIService GET /profile respond 400 to missing required args 1`] = `
Object {
  "message": "Either pass an \`address\` or \`did\` parameter",
  "status": "error",
}
`;

exports[`APIService GET /profile respond 404 to address with no profile 1`] = `
Object {
  "message": "Address link not found, address does not have a 3Box or is malformed",
  "status": "error",
}
`;

exports[`APIService GET /profile respond 404 to did passed as address 1`] = `
Object {
  "message": "Address link not found, address does not have a 3Box or is malformed",
  "status": "error",
}
`;

exports[`APIService GET /profile respond json to DID with profile 1`] = `
Object {
  "a": "a",
  "b": "b",
  "c": "c",
  "d": "d",
  "proof_did": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE1NzE5NDUxNjcsImlzcyI6ImRpZDptdXBvcnQ6UW1RQW5hY2hUSlhNVkhLYTVOdTNtWk5uNWpHcko5VHZISmRlM05TcDhKNHF6TCJ9.hvlmZnE3uucuDje7xF13wRM-skAQU_EWGQNLv8Bg-naXhKs4RXAwtt6QEAuNAyCoyUi5YTWboVXvuk2ZN4kvKw",
}
`;

exports[`APIService GET /profile respond json to DID with profile and metadata option 1`] = `
Object {
  "a": "a",
  "b": "b",
  "c": "c",
  "d": "d",
  "proof_did": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE1NzE5NDUxNjcsImlzcyI6ImRpZDptdXBvcnQ6UW1RQW5hY2hUSlhNVkhLYTVOdTNtWk5uNWpHcko5VHZISmRlM05TcDhKNHF6TCJ9.hvlmZnE3uucuDje7xF13wRM-skAQU_EWGQNLv8Bg-naXhKs4RXAwtt6QEAuNAyCoyUi5YTWboVXvuk2ZN4kvKw",
}
`;

exports[`APIService GET /profile respond json to address with profile 1`] = `
Object {
  "a": "a",
  "b": "b",
  "c": "c",
  "d": "d",
  "proof_did": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE1NzE5NDUxNjcsImlzcyI6ImRpZDptdXBvcnQ6UW1RQW5hY2hUSlhNVkhLYTVOdTNtWk5uNWpHcko5VHZISmRlM05TcDhKNHF6TCJ9.hvlmZnE3uucuDje7xF13wRM-skAQU_EWGQNLv8Bg-naXhKs4RXAwtt6QEAuNAyCoyUi5YTWboVXvuk2ZN4kvKw",
}
`;

exports[`APIService GET /profile respond json to address with profile and metadata option 1`] = `
Object {
  "a": "a",
  "b": "b",
  "c": "c",
  "d": "d",
  "proof_did": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJpYXQiOjE1NzE5NDUxNjcsImlzcyI6ImRpZDptdXBvcnQ6UW1RQW5hY2hUSlhNVkhLYTVOdTNtWk5uNWpHcko5VHZISmRlM05TcDhKNHF6TCJ9.hvlmZnE3uucuDje7xF13wRM-skAQU_EWGQNLv8Bg-naXhKs4RXAwtt6QEAuNAyCoyUi5YTWboVXvuk2ZN4kvKw",
}
`;

exports[`APIService GET /space respond 401 to missing args 1`] = `Object {}`;

exports[`APIService GET /space respond json to space (by address) that exists 1`] = `
Object {
  "a": "a",
  "b": "b",
  "c": "c",
  "d": "d",
  "thread-/orbitdb/zdpuAtmJDmsVPeKdJiLt3nFweLN3u7GEc8kQzNqyBKUkcP9qc/3box.thread.api.thread": Object {
    "address": "/orbitdb/zdpuAtmJDmsVPeKdJiLt3nFweLN3u7GEc8kQzNqyBKUkcP9qc/3box.thread.api.thread",
    "firstModerator": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    "members": false,
    "name": "3box.thread.api.thread",
  },
}
`;

exports[`APIService GET /thread respond 404 to thread by address that does NOT exist 1`] = `Array []`;

exports[`APIService GET /thread respond 404 to thread by config that does NOT exist 1`] = `Array []`;

exports[`APIService GET /thread respond 500 to thread address malformed 1`] = `Array []`;

exports[`APIService GET /thread respond 500 to thread by config missing args 1`] = `
Array [
  Object {
    "author": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    "message": "a",
    "postId": "zdpuAoKx6NKUG3S86M7NFFP2kBXUXeFY3dFahzQDXtod9gqwz",
    "timestamp": 1572284917,
  },
  Object {
    "author": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    "message": "b",
    "postId": "zdpuB1jbNgQvKdkp223uBnkCjmPVESLXPLtfEkNx3DZGMDb3S",
    "timestamp": 1572461635,
  },
  Object {
    "author": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    "message": "c",
    "postId": "zdpuAnF3Ph9bhikC7mfgZKCS59oCssmhout8xWQZti9vC5q9W",
    "timestamp": 1572461638,
  },
]
`;

exports[`APIService GET /thread respond json to thread by address that exists 1`] = `
Array [
  Object {
    "author": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    "message": "a",
    "postId": "zdpuAoKx6NKUG3S86M7NFFP2kBXUXeFY3dFahzQDXtod9gqwz",
    "timestamp": 1572284917,
  },
  Object {
    "author": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    "message": "b",
    "postId": "zdpuB1jbNgQvKdkp223uBnkCjmPVESLXPLtfEkNx3DZGMDb3S",
    "timestamp": 1572461635,
  },
  Object {
    "author": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    "message": "c",
    "postId": "zdpuAnF3Ph9bhikC7mfgZKCS59oCssmhout8xWQZti9vC5q9W",
    "timestamp": 1572461638,
  },
]
`;

exports[`APIService GET /thread respond json to thread by config that exists 1`] = `
Array [
  Object {
    "author": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    "message": "a",
    "postId": "zdpuAoKx6NKUG3S86M7NFFP2kBXUXeFY3dFahzQDXtod9gqwz",
    "timestamp": 1572284917,
  },
  Object {
    "author": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    "message": "b",
    "postId": "zdpuB1jbNgQvKdkp223uBnkCjmPVESLXPLtfEkNx3DZGMDb3S",
    "timestamp": 1572461635,
  },
  Object {
    "author": "did:3:bafyreigi4zax3eh3xisz7xor72hm47bbhxkod7562elvmkc257xmzo4wvy",
    "message": "c",
    "postId": "zdpuAnF3Ph9bhikC7mfgZKCS59oCssmhout8xWQZti9vC5q9W",
    "timestamp": 1572461638,
  },
]
`;
